--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "mercadopago/dx-php": "^2.4",
-        "realrashid/sweet-alert": "^5.0"
+        "realrashid/sweet-alert": "^5.0",
+        "tomfordrumm/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
